# iedclient

./: README.md  iedclient.cabal  stack.yaml
app/: Main.hs
src/: Tui.hs
