name:                iedclient
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tpasternak/iedclient#readme
license-file:        LICENSE
author:              Tomasz Pasternak
maintainer:          pasternak.t@gmail.com
copyright:           2017 Tomasz Pasternak
category:            Automation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable iedclient
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , iedclient
                     , haskell61850
                     , cmdargs
                     , regex-posix
                     , directory
                     , brick
                     , vty
                     , microlens
  default-language:    Haskell2010

test-suite iedclient-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , iedclient
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/iedclient
